Bug 58427 - CRASH when I click on FORMATS in advanced option of search dialog box.
Summary: CRASH when I click on FORMATS in advanced option of search dialog box.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: All All
: medium normal
Assignee: Michael Stahl (allotropia)
URL:
Whiteboard: bibisected40 target:4.1.0 target:4.0.0.1
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-12-17 18:18 UTC by ydutrieux
Modified: 2012-12-20 20:33 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Bibisect log (2.80 KB, text/plain)
2012-12-18 14:31 UTC, Werner
Details
bt + console logs on master (8.26 KB, text/plain)
2012-12-18 23:47 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ydutrieux 2012-12-17 18:18:25 UTC
Platform Libo 4.0b1 Win7 - 32bits

To reproduce
- New document.
- Ctrl-H (Search-replace) - More options - [Formats]

CRASH.
Comment 1 Jeff 2012-12-17 18:28:35 UTC
I confirm under Ubuntu 12.04
Comment 2 pierre-yves samyn 2012-12-17 19:00:25 UTC
Hello

I confirm with Windows 7 64bits

Regards
Pierre-Yves
Comment 3 Jean-Baptiste Faure 2012-12-17 21:33:47 UTC
Reproducible in Version 4.0.0.0.beta1+ (Build ID: 51ecd2f55d608f853852335808b643f61b9a844) under Ubuntu 12.04 x86_64

Best regards. JBF
Comment 4 Werner 2012-12-18 14:31:51 UTC
Created attachment 71732 [details]
Bibisect log
Comment 5 Julien Nabet 2012-12-18 23:47:44 UTC
Created attachment 71775 [details]
bt + console logs on master

On pc Debian x86-64 with master sources updated today (commit 8a028afd55decfd269268d0d1e6adcfbdc9d85d0) and a brand new LO profile, I reproduced the crash.

Attached bt + console logs.
Comment 6 Julien Nabet 2012-12-18 23:49:28 UTC
Michael: I noticed this:
#2  0x00007f7fff16b621 in *__GI___assert_fail (assertion=0x7f7fdf2f1494 "aText.Len()", file=<optimized out>, line=232, function=
    0x7f7fdf2f18a0 "void FontPrevWin_Impl::CheckScript()") at assert.c:81
#3  0x00007f7fdf13b7c4 in FontPrevWin_Impl::CheckScript (this=0x5dcff90) at /home/julien/compile-libreoffice/libo/svx/source/dialog/fntctrl.cxx:232

+ this:
http://cgit.freedesktop.org/libreoffice/core/commit/?id=3d1f4649ee72dd85e1d994ac2bdccc3147830bbd

so, one for you?
Comment 7 Not Assigned 2012-12-20 20:27:34 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a2dd3acd205cb8df959ac03e99b1d1991cc562a8

fdo#58427: fix another crash in SvxFontPrevWindow::Paint



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Stahl (allotropia) 2012-12-20 20:28:24 UTC
soo... given the bibisect log from Werner (thanks a lot!)
the crash was introduced somewhere in the widget layout merge.

crash because SvxFontPrevWindow::Paint cannot set pImpl->aText
to a non-empty string; similar crash was fixed in another dialog with
http://cgit.freedesktop.org/libreoffice/core/commit/?id=86b6bf6e53c234e3df951ebb08513b0d4fc47a14

comparing with my latest master build from before that (44aa7df6)
shows that the old code used to return "Example" for Window::GetText(),
while newer code returns empty "".

so we could somehow that "Example" window title... but perhaps
it's better to add another fallback instead, i see that there
is some example text that is only requested if CTL or CJK are
active, let's try to request that as a fallback too...

... hmm "Lorem ipsum", at least we're speaking a universal language now :)
Comment 9 Not Assigned 2012-12-20 20:33:24 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1cf4f78955d3a3cd33ff6997d4bd741d0531cf88&g=libreoffice-4-0

fdo#58427: fix another crash in SvxFontPrevWindow::Paint


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.