fdo#58427: fix another crash in SvxFontPrevWindow::Paint

In Writer, Search&replace -> More options -> Formats  used to have a
window title of "Example" but not any more;  let's add another fallback
for the example text to makeRepresentativeTextForFont, which seems to
give "Lorem ipsum" here.

(regression from widget layout)

Change-Id: I8dd9c099be31ed4390b04e8069a74960b58c6084